[package]
name = "better-hand"
version = "1.0.1"
authors = ["Adithya Chari <adithya.chari@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Finds better No Limit Hold 'Em hands than yours"
homepage = "https://github.com/adchari/better-hand"
documentation = "https://github.com/adchari/better-hand"
repository = "https://github.com/adchari/better-hand"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs_poker = "1.0.0"
rayon = "1.5.0"
clap = "2.33.3"
prettytable-rs = "0.8"
dialoguer = "0.8.0"